--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  camera: ^0.5.6+3
+  path_provider: ^1.4.2
+  path: ^1.6.4
+  image_picker:
   flutter:
     sdk: flutter
 
