--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_app
+name: La_aplicacion
 description: A new Flutter application.
 
 # The following defines the version and build number for your application.
@@ -21,6 +21,8 @@ dependencies:
   path_provider: ^1.4.2
   path: ^1.6.4
   image_picker:
+  http: ^0.12.0+1
+  english_words: ^3.1.0
   flutter:
     sdk: flutter
 
@@ -29,6 +31,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  dart_dev: ^3.0.0
   flutter_test:
     sdk: flutter
 
